<resources>
    <!-- Application -->
    <string name="app_name">Pawtner</string>
    <string name="content_desc">Todo ...</string>
    <string name="app_logout">Keluar</string>

    <!-- DEVELOPER PROFILE -->
    <string name="developer_photo">https://avatars.githubusercontent.com/u/12522356?v=4</string>
    <string name="developer_name">Wahyudianto, Fajar</string>
    <string name="developer_email">fwahyudi06@gmail.com</string>
    <string name="developer_location">Tangerang, Indonesia</string>

    <!-- Navigation Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_pets">Pets</string>
    <string name="menu_mypets">My Pets</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_account">Account</string>

    <!-- Started Screen -->
    <string name="started.title">Cari dan Adopsi Hewan</string>
    <string name="started.subtitle">Temukan hewan berdasarkan keinginan kamu tanpa perlu keluar rumah hanya dengan menggunakan smartphone</string>
    <string name="started.btnStart">Mulai</string>
    <string name="started.suggest">Sudah punya akun? Masuk</string>

    <!-- Auth Screen -->
    <string name="auth.register.title">Buat Akun</string>
    <string name="auth.register.hitUsername">Nama pengguna</string>
    <string name="auth.register.hitEmail">Surel</string>
    <string name="auth.register.hitPass">Kata sandi</string>
    <string name="auth.register.hitCPass">Konfirmasi Kata sandi</string>
    <string name="auth.login.title">Masuk</string>
    <string name="auth.login.hitUsername">Nama pengguna atau email</string>
    <string name="auth.login.hitPass">Kata sandi</string>

    <!-- Account Screen -->
    <string name="account_favorite_pets">Hewan Peliharaan Favorit</string>
</resources>